Table users{
  id uuid [primary key]
  password hash
  first_name string
  last_name string
  rank string 
  email string [unique, not null]
  phone string 
  organization string
  crew string
  position string
  permissions string
  created_at timestamp
}

Table events {
  id uuid [primary key]
  user_id integer [ref: > users.id]
  chat_id integer [ref:> chats.id]
  start_date date
  end_data date
  title string 
  description string
  color string
  status string [default: "pending"]
  created_at timestamp
}

Table chats {
  id uuid [primary key]
  is_group    boolean [default: false]
  name        string
  status string
  created_at timestamp
}

Table chat_members {
  id uuid [primary key]
  chat_id    uuid [ref: > chats.id]
  user_id    uuid [ref: > users.id]
  created_at timestamp
}

Table messages {
  id uuid [primary key]
  chat_id     uuid [ref: > chats.id]
  sender_id   uuid [ref: > users.id]
  content     text
  created_at  timestamp 
}